# obiwan-haskell

./: .gitignore  .travis.yml  README.md  TODO  default.nix  obiwan.cabal  obiwan.nix  pkgs.nix  shell.nix  stack.yaml  stackage-13.10.nix  update-nix.sh
app/: Main.hs
examples/: helloworld.lua
nix/: build.nix  derivation.nix  haskell-nix-src.json  haskell.nix  module.nix  nixpkgs.nix  sources.json  stackage.nix  test.nix  update_stackage.sh
scripts/: update_nix.sh
src/: Main.hs  TftpConnection.hs  TftpContent.hs  TftpProto.hs  TftpServer.hs
test/: TftpProtoSpec.hs
