name:                obiwan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blitz/obiwan#readme
license:             AGPL-3
license-file:        LICENSE
author:              Julian Stecklina
maintainer:          js@alien8.de
copyright:           2019 Julian Stecklina
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable obiwan
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TftpProto
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       network >= 2.8 && < 3,
                       bytestring,
                       text,
                       binary >= 0.8,
                       containers,
                       clock,
                       pqueue
