name:                obiwan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blitz/obiwan#readme
license:             AGPL-3
license-file:        LICENSE
author:              Julian Stecklina
maintainer:          js@alien8.de
copyright:           2019 Julian Stecklina
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
  exposed-modules:     TftpProto, TftpServer, TftpContent, TftpConnection
  build-depends:       base >= 4.7 && < 5,
                       binary >= 0.8,
                       bytestring,
                       case-insensitive,
                       network >= 2.8 && < 3,
                       filepattern,
                       mtl

executable obiwan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       hslua >= 1.0,
                       optparse-applicative >= 0.14.3,
                       obiwan

test-suite obiwan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TftpProtoSpec
  build-depends:       base, hspec, bytestring, obiwan
  ghc-options:         -fwarn-unused-imports
  default-language:    Haskell2010
