name:                obiwan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blitz/obiwan#readme
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Julian Stecklina
maintainer:          js@alien8.de
copyright:           2019 Julian Stecklina
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
  exposed-modules:     TftpProto, TftpServer, TftpConnection
  build-depends:       base,
                       binary,
                       bytestring,
                       case-insensitive,
                       network,
                       filepattern,
                       mtl,
                       unix

executable obiwan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       network,
                       optparse-applicative,
                       socket-activation,
                       obiwan

test-suite obiwan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TftpProtoSpec
  build-depends:       base, hspec, bytestring, obiwan
  ghc-options:         -fwarn-unused-imports
  default-language:    Haskell2010
